Add simple ui test